Add jekyll, create theme and first post

--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-This site is under construction.
-Check out my twitter @gonzalorobaina
+---
+layout: default
+title: Gonzalo Robaina
+---
+
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
