Add google analytics and dynamic page title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
+title: Hello
 layout: default
 background: 'assets/images/bg-profile.jpg'
 ---
@@ -27,7 +28,7 @@ background: 'assets/images/bg-profile.jpg'
 								<ul>
 										<li>Name: Gonzalo Robaina</li>
 										<li>Birthdate: February 12, 1985</li>
-										<li>City: Montevideo, Uruguay</li>
+										<li>City: Atlántida, Uruguay</li>
 										<li>Website: <a href="http://gonza.uy">gonza.uy</a></li>
 								</ul>
 						</div>
