--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ background: 'assets/images/bg-profile.jpg'
 		<div class="container-fluid container-custom">
 				<div class="row">
 						<div class="col-sm-12">
-								<h1>Hello, I am Gonzalo Robaina<br>Full-Stack Web Developer.</h1>
-								<p>I'm a web programmer analyst living in Atlántida, Uruguay. I have worked with companies like Netsuite, Moove-it, Globant and currently working as a senior ruby developer at Tarmac.</p>
+								<h1>Hello, I am Gonzalo Robaina<br>Web Applications Developer.</h1>
+								<p>I'm a web programmer analyst living in Atlántida, Uruguay. I have worked with companies like Netsuite, Moove-it, Globant and currently working as a senior software developer at Tarmac.</p>
 								<p>Programming is not just a job for me, it's a passion.</p>
 						</div>
 				</div>
