--- a/index.html
+++ b/index.html
@@ -1,115 +1,111 @@
----
-title: Hello
-layout: default
-background: 'assets/images/bg-profile.jpg'
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="Web and Mobile Applications Developer" />
+    <meta name="author" content="Gonza Robaina" />
+    <title>Gonza Robaina</title>
 
-<!-- Hello text-->
-<section class="module">
-		<div class="container-fluid container-custom">
-				<div class="row">
-						<div class="col-sm-12">
-								<h1>Hello, I am Gonzalo Robaina<br>Web Applications Developer.</h1>
-								<p>I'm a web programmer analyst living in Atlántida, Uruguay. I have worked with companies like Netsuite, Moove-it, Globant and currently working as a senior software developer at Tarmac.</p>
-								<p>Programming is not just a job for me, it's a passion.</p>
-						</div>
-				</div>
-		</div>
-</section>
-<!-- Hello text end-->
-<!-- Personal info-->
-<section class="module">
-		<div class="container-fluid container-custom">
-				<div class="row">
-						<div class="col-sm-4">
-								<h6>Personal Info.</h6>
-						</div>
-						<div class="col-sm-8">
-								<ul>
-										<li>Name: Gonzalo Robaina</li>
-										<li>Birthdate: February 12, 1985</li>
-										<li>City: Atlántida, Uruguay</li>
-										<li>Website: <a href="http://gonza.uy">gonza.uy</a></li>
-								</ul>
-						</div>
-				</div>
-		</div>
-</section>
-<!-- Personal info end-->
-<!-- Services-->
-<section class="module">
-		<div class="container-fluid container-custom">
-				<div class="row">
-						<div class="col-sm-4">
-								<h6>Services.</h6>
-						</div>
-						<div class="col-sm-8">
-								<p>Even though programming is what I do for a living, my skillset is very wide. I have some knowledge on Graphic Design, Photography, Online Marketing and even Bartending.</p>
-								<div class="row">
-										<div class="col-sm-6">
-												<ul class="service-list">
-														<li>Digital Strategy</li>
-														<li>Software Development</li>
-														<li>Content Direction</li>
-														<li>Interaction Design</li>
-												</ul>
-										</div>
-										<div class="col-sm-6">
-												<ul class="service-list">
-														<li>Websites & Apps</li>
-														<li>Responsive Design</li>
-														<li>Digital Marketing</li>
-														<li>User Experience</li>
-												</ul>
-										</div>
-								</div>
-						</div>
-				</div>
-		</div>
-</section>
-<!-- Services end-->
-<!-- Professional skills-->
-<section class="module">
-		<div class="container-fluid container-custom">
-				<div class="row">
-						<div class="col-sm-4">
-								<h6>Professional skills.</h6>
-						</div>
-						<div class="col-sm-8">
-								<!-- Progress bar-->
-								<div class="progress-item">
-										<div class="progress-title">Ruby/Rails, <span class="p-coutn"></span>%</div>
-										<div class="progress">
-												<div class="progress-bar" aria-valuenow="80" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-								</div>
-								<!-- Progress bar end-->
-								<!-- Progress bar-->
-								<div class="progress-item">
-										<div class="progress-title">HTML/CSS, <span class="p-coutn"></span>%</div>
-										<div class="progress">
-												<div class="progress-bar" aria-valuenow="70" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-								</div>
-								<!-- Progress bar end-->
-								<!-- Progress bar-->
-								<div class="progress-item">
-										<div class="progress-title">Javascript, <span class="p-coutn"></span>%</div>
-										<div class="progress">
-												<div class="progress-bar" aria-valuenow="60" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-								</div>
-								<!-- Progress bar end-->
-								<!-- Progress bar-->
-								<div class="progress-item">
-										<div class="progress-title">UI/UX, <span class="p-coutn"></span>%</div>
-										<div class="progress">
-												<div class="progress-bar" aria-valuenow="90" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-								</div>
-								<!-- Progress bar end-->
-						</div>
-				</div>
-		</div>
-</section>
-<!-- Professional skills end-->
+    <link rel="canonical" href="http://gonza.uy" />
+
+    <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
+    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+    <!-- Bootstrap core CSS -->
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+
+    <!-- Custom styles for this template -->
+    <link href="cover.css" rel="stylesheet" />
+  </head>
+  <body class="text-center">
+		<div id="particles-js"></div>
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto"></header>
+
+      <main role="main" class="inner cover">
+        <img src="gonza.svg" alt="Gonza Robaina" />
+      </main>
+
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>
+            Web Applications Developer.
+            <a href="mailto:gonzalor@gmail.com">Get in touch</a>.
+          </p>
+        </div>
+      </footer>
+    </div>
+    <script>
+      particlesJS("particles-js", {
+        particles: {
+          number: { value: 80, density: { enable: true, value_area: 800 } },
+          color: { value: "#ffffff" },
+          shape: {
+            type: "circle",
+            stroke: { width: 0, color: "#000000" },
+            polygon: { nb_sides: 5 },
+            image: { src: "img/github.svg", width: 100, height: 100 }
+          },
+          opacity: {
+            value: 0.5,
+            random: false,
+            anim: { enable: false, speed: 1, opacity_min: 0.1, sync: false }
+          },
+          size: {
+            value: 3,
+            random: true,
+            anim: { enable: false, speed: 40, size_min: 0.1, sync: false }
+          },
+          line_linked: {
+            enable: true,
+            distance: 150,
+            color: "#ffffff",
+            opacity: 0.4,
+            width: 1
+          },
+          move: {
+            enable: true,
+            speed: 6,
+            direction: "none",
+            random: false,
+            straight: false,
+            out_mode: "out",
+            bounce: false,
+            attract: { enable: false, rotateX: 600, rotateY: 1200 }
+          }
+        },
+        interactivity: {
+          detect_on: "canvas",
+          events: {
+            onhover: { enable: false, mode: "repulse" },
+            onclick: { enable: true, mode: "push" },
+            resize: true
+          },
+          modes: {
+            grab: { distance: 400, line_linked: { opacity: 1 } },
+            bubble: {
+              distance: 400,
+              size: 40,
+              duration: 2,
+              opacity: 8,
+              speed: 3
+            },
+            repulse: { distance: 200, duration: 0.4 },
+            push: { particles_nb: 4 },
+            remove: { particles_nb: 2 }
+          }
+        },
+        retina_detect: true
+      });
+    </script>
+  </body>
+</html>
