New splash with newest logo from nacho

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       particlesJS("particles-js", {
         particles: {
           number: { value: 80, density: { enable: true, value_area: 800 } },
-          color: { value: "#ffffff" },
+          color: { value: "#bbbbbb" },
           shape: {
             type: "circle",
             stroke: { width: 0, color: "#000000" },
@@ -68,7 +68,7 @@
           line_linked: {
             enable: true,
             distance: 150,
-            color: "#ffffff",
+            color: "#cccccc",
             opacity: 0.4,
             width: 1
           },
