Add google analytics snippet

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <title>Gonza Robaina</title>
 
     <link rel="canonical" href="http://gonza.uy" />
+	  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129786-12"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-129786-12');
+    </script>
 
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
