--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         <div class="inner">
           <p>
             Web Applications Developer.
-            <a href="mailto:gonzalor@gmail.com">Get in touch</a>.
+            <a href="mailto:gonzalor@gmail.com">Get in touch</a>.<br/>
+	    Looking for a <a href="https://hosting.gonza.uy">reliable and fast web hosting?</a>
           </p>
         </div>
       </footer>
