--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Web and Mobile Applications Developer" />
+    <meta name="description" content="Average Web and Mobile Applications Developer" />
     <meta name="author" content="Gonza Robaina" />
     <title>Gonza Robaina</title>
 
@@ -48,9 +48,8 @@
       <footer class="mastfoot mt-auto">
         <div class="inner">
           <p>
-            Web Applications Developer.
-            <a href="mailto:gonzalor@gmail.com">Get in touch</a>.<br/>
-	    Looking for a <a href="https://hosting.gonza.uy">reliable and fast web hosting?</a>
+            Average Web Applications Developer.
+            <a href="mailto:gonzalor@gmail.com">Get in touch</a>
           </p>
         </div>
       </footer>
