--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="author" content="Gonza Robaina" />
     <title>Gonza Robaina</title>
 
+    <link rel="icon" href="favicon.png">
+
     <link rel="canonical" href="http://gonza.uy" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
