Improve dark mode background color pattern

--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
     <!-- Trianglify background generator -->
     <script src='https://unpkg.com/trianglify@^4/dist/trianglify.bundle.js'></script>
     <script>
+      if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        // dark mode
+        colors = ["#000000","#0f0f0f","#262626","#424242","#696969","#8C8C8C","#ADADAD","#CDCDCD"]
+      } else {
+        colors = ["#ffffff","#f0f0f0","#d9d9d9","#bdbdbd","#969696","#737373","#525252","#323232"];
+      }
       const pattern = trianglify({
         width: window.innerWidth,
         height: window.innerHeight,
-        xColors: ["#ffffff","#f0f0f0","#d9d9d9","#bdbdbd","#969696","#737373","#525252","#323232"]
+        xColors: colors
       })
     </script>
 
