Update meeting url to use zoom instead of hangouts

--- a/chat/index.html
+++ b/chat/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <title>Redirecting...</title>
-  <link rel="canonical" href="https://hangouts.google.com/call/qcpqgknm3nfrtdmbdfeydp57tue"/>
-  <meta http-equiv="refresh" content="0;url=https://hangouts.google.com/call/qcpqgknm3nfrtdmbdfeydp57tue" />
+  <link rel="canonical" href="https://us04web.zoom.us/j/7090170418?pwd=ZTJTZ2R1QU93bkV0MnBaREFjZjZmUT09"/>
+  <meta http-equiv="refresh" content="0;url=https://us04web.zoom.us/j/7090170418?pwd=ZTJTZ2R1QU93bkV0MnBaREFjZjZmUT09" />
 </head>
 <body>
   <h1>Redirecting...</h1>
-  <a href="https://hangouts.google.com/call/qcpqgknm3nfrtdmbdfeydp57tue">Click here if you are not redirected.<a>
-  <script>location='https://hangouts.google.com/call/qcpqgknm3nfrtdmbdfeydp57tue'</script>
+  <a href="https://us04web.zoom.us/j/7090170418?pwd=ZTJTZ2R1QU93bkV0MnBaREFjZjZmUT09">Click here if you are not redirected.<a>
+  <script>location='https://us04web.zoom.us/j/7090170418?pwd=ZTJTZ2R1QU93bkV0MnBaREFjZjZmUT09'</script>
 </body>
 </html>
