--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </picture>
       </main>
       <footer class="d-flex justify-content-center align-items-center">
-        <p class="m-0">
+        <p class="m-0 text-wrap text-center px-5 py-2">
           Average Web Applications Developer.
           <a href="mailto:gonzalor@gmail.com" class="btn btn-light">Get in touch</a>
         </p>
